ui-ux: Fix header spacing/colors

--- a/css/app.sass
+++ b/css/app.sass
@@ -180,9 +180,9 @@ header
 	position: fixed
 	top: 0
 	width: 100%
-	background: #fefefe
+	background: $color-white
+	border-bottom: 1px solid #f1f2f4
 	z-index: 999
-	box-shadow: 0px 1px 8px 1px #eaeaea
 
 	nav
 		display: flex
@@ -218,16 +218,16 @@ header
 
 			a
 				display: block
-				font-size: 1.2rem
+				font-size: 1.1rem
 				font-family: 'Quicksand', sans-serif
 				font-weight: bold
-				color: $color-black
-				border-bottom: 2px solid transparent
+				color: #0000008a
 				transition: all 300ms ease
-				&:hover
-					border-color: $color-black
 
-		@media all and (min-width: 667px)
+				&:hover
+					color: $color-black
+
+		@media all and (min-width: 767px)
 			.toggle-menu
 				display: none
 
@@ -242,7 +242,7 @@ header
 
 				li
 					display: inline-block
-					margin: 0 15px
+					margin: 0 0.75rem
 
 
 
